--- a/index.html
+++ b/index.html
@@ -7,4 +7,15 @@
 <body>
     <h1>Twitter page</h1>
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KMCJBJK7H1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-KMCJBJK7H1');
+</script>
 </html>
+
+
